---------------------------------------------------------------------------------------------------
Version: 4.2.10
Date: ????
  Bugfixes:
    - Fixed a crash due to invalid character used in item-subgroup names when the mod setting
      "One recipe category" was enabled
---------------------------------------------------------------------------------------------------
Version: 4.2.9
Date: 2026-01-03
  Bugfixes:
    - Fixed copypaste error in void recipe handling causing a crash in rare situations
  Changes:
    - Updated compat for Angelsmods
---------------------------------------------------------------------------------------------------
Version: 4.2.8
Date: 2026-01-02
  Bugfixes:
    - Updated for new release of Bovrevamp (Removed nuclear setting)
---------------------------------------------------------------------------------------------------
Version: 4.2.7
Date: 2026-01-02
  Bugfixes:
    - Fixed a crash with recipes where energy_required is not defined
    - Fixed certain recipe crafting times being off due to energy_required defaulting to 1
      instead of 0.5 when not specified in the original recipe
    - Fixed a crash with certain recipes that have no ingredient table
    - Fixed recipe productivity unlocked by techs not being applied to compressed recipes
---------------------------------------------------------------------------------------------------
Version: 4.2.6
Date: 2025.01.14
  Bugfixes:
    - Check for optional emissions on burner generator energy sources
    - Added missing properties for recipe compression
    - Fixed that the concentrator output fluidbox was smaller than the result of some recipes
---------------------------------------------------------------------------------------------------
Version: 4.2.5
Date: 2024.12.16
  Bugfixes:
    - Fixed a possible crash with mods adding burner-generators
---------------------------------------------------------------------------------------------------
Version: 4.2.4
Date: 2024.12.13