@@ -34,6 +34,7 @@
     "(?)space-exploration-postprocess",
     "(?)space-exploration",
     "(?)pypostprocessing",
-    "(?)248k"
+    "(?)248k",
+    "(?)planet-muluna"
 ]
 }
